--- a/JavaScript/function/methods/applyMethod.html
+++ b/JavaScript/function/methods/applyMethod.html
@@ -10,11 +10,15 @@
 <body>
     <script>
         // apply("null", arr)
-        let arr = [12, 45, 34, 23, 3, 56, 4]
-        let max = Math.max.apply(this, arr)
-        let min = Math.min.apply(this, arr)
-        console.log(max)
-        console.log(min)
+        // let arr = [12, 45, 34, 23, 3, 56, 4]
+        // let max = Math.max.apply(this, arr)
+        // let min = Math.min.apply(this, arr)
+        // console.log(max)
+        // console.log(min)
+
+        let person = {
+            name: "Sparsh "
+        }
     </script>
 </body>
 
