--- a/JavaScript/function/methods/toString.html
+++ b/JavaScript/function/methods/toString.html
@@ -9,9 +9,9 @@
 
 <body>
     <script>
-        function sum(a, b) {
-            return a + b;
-        }
+        // function sum(a, b) {
+        //     return a + b;
+        // }
         // document.write(sum(5, 10)); // Outputs: 15
         // console.log(sum(5, 10).toString()); // Outputs: 15
         // console.log(typeof sum(3, 5).toString());
@@ -19,7 +19,48 @@
 
         // console.log(sum(3, 5), typeof (sum)); // Outputs: 1000
 
+        // let a = Number(prompt("Enter your number :"))
 
+        // if (a >= 0) {
+        //     console.log("Positive");
+        // }
+        // else {
+        //     console.log("Negative");
+        // }
+
+        //   let weekdays = 6;
+
+        //     switch (weekdays) {
+        //         case 1:
+        //             console.log("Monday");
+        //             break;
+        //         case 2:
+        //             console.log("Tuesday");
+        //             break;
+        //         case 3:
+        //             console.log("Wednesday");
+        //             break;
+        //         case 4:
+        //             console.log("Thursday");
+        //             break;
+        //         case 5:
+        //             console.log("Friday");
+        //             break;
+        //         case 6:
+        //             console.log("Saturday");
+        //             break;
+        //         case 7:
+        //             console.log("Sunday");
+        //             break;
+        //         default:
+        //             console.log("Invalid day");
+        //             break;
+        //     }
+
+
+        for (let a = 1; a <= 10; a++) {
+            console.log(a);
+        }
     </script>
 </body>
 
