--- a/project/Calculator/index.html
+++ b/project/Calculator/index.html
@@ -5,14 +5,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .calculator {
+            width: 300px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #343333;
+            border-radius: 5px;
+            text-align: center;
+        }
+
+        input {
+            /* width: 100%; */
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: rgb(215, 238, 246);
+            text-align: center;
+            outline: none;
+            /* border: 2px solid rgb(202, 0, 0); */
+        }
+
+        .output {
+            color: white;
+            font-size: 24px;
+            margin-top: 20px;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #f1f1f1;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: black;
+            color: white;
+        }
+
+        button:active {
+            background-color: gray;
+        }
+    </style>
 </head>
 
 <body>
-    <input type="text" placeholder="Enter First Number" class="firstInput"> <br><br>
-    <input type="text" placeholder="Enter Operator + , - , * , /" class="operator"> <br> <br>
-    <input type="text" placeholder="Enter Second Number" class="secondInput"> <br> <br>
-    <p class="output">loading...</p>
-    <button onclick="calculator()">Calculate</button>
+    <div class="calculator">
+        <input type="text" placeholder="Enter First Number" class="firstInput"> <br><br>
+        <input type="text" placeholder="Enter Operator + , - , * , /" class="operator"> <br> <br>
+        <input type="text" placeholder="Enter Second Number" class="secondInput"> <br> <br>
+        <p class="output">loading...</p>
+        <button onclick="calculator()">Calculate</button>
+    </div>
 
     <script>
         let calculator = () => {
