--- a/JavaScript/Array/code1.html
+++ b/JavaScript/Array/code1.html
@@ -10,15 +10,35 @@
 <body>
     <script>
         // let studentName1 = "Sparsh" 
-        // let studentName2 = "Imran" 
+        // let studentName2 = "Imran"
 
-        let Students = ["Sparsh", 2, "Imran", 7, "Ganesh", "Rahul", "Raj"];
-        // console.log(Students);
+        // let Students = ["Sparsh", 2, "Imran", 7, "Ganesh", "Rahul", "Raj"];
+        // console.log("Students name :" + Students);
         // document.writeln(Students);
-        for (let Name in Students) {
-            // console.log(Students[Name]);
-            document.writeln(Students[Name] + "<br>");
-        }
+        // for (let Name in Students) {
+        //     // console.log(Students[Name]);
+        //     // document.writeln(Students[Name] + "<br>");
+        // }
+
+        // let fruits = new Array()
+        // fruits[0] = "Apple"
+        // fruits[1] = "Banana"
+        // fruits[2] = "Orange"
+        // fruits[3] = "Mango"
+        // fruits[4] = "Grapes"
+        // fruits[5] = "Guava"
+        // fruits[6] = "Pineapple"
+
+        // console.log(fruits);
+
+        let fruits = new Array("Apple", "Banana", "Orange", "Mango", "Grapes", "Guava", "Pineapple");
+        console.log(fruits);
+        // document.writeln(fruits);
+        let ArrayName = ["Apple", "Banana", "Orange", "Mango", "Grapes", "Guava", "Pineapple"]
+
+        let name = new Array("Apple", "Banana", "Orange");
+
+
 
     </script>
 </body>
