--- a/JavaScript/Array/code1.html
+++ b/JavaScript/Array/code1.html
@@ -31,13 +31,16 @@
 
         // console.log(fruits);
 
-        let fruits = new Array("Apple", "Banana", "Orange", "Mango", "Grapes", "Guava", "Pineapple");
-        console.log(fruits);
-        // document.writeln(fruits);
-        let ArrayName = ["Apple", "Banana", "Orange", "Mango", "Grapes", "Guava", "Pineapple"]
+        // let fruits = new Array("Apple", "Banana", "Orange", "Mango", "Grapes", "Guava", "Pineapple");
+        // console.log(fruits);
+        // // document.writeln(fruits);
+        // let ArrayName = ["Apple", "Banana", "Orange", "Mango", "Grapes", "Guava", "Pineapple"]
 
-        let name = new Array("Apple", "Banana", "Orange");
+        // let name = new Array("Apple", "Banana", "Orange");
 
+        let number = [34, 56, 78, 98, 7, 9, 3, 2]
+        number.fill(0, 3, 7)
+        console.log(number);
 
 
     </script>
