--- a/JavaScript/Array/code1.html
+++ b/JavaScript/Array/code1.html
@@ -38,9 +38,19 @@
 
         // let name = new Array("Apple", "Banana", "Orange");
 
-        let number = [34, 56, 78, 98, 7, 9, 3, 2]
-        number.fill(0, 3, 7)
-        console.log(number);
+        // let number = [34, 56, 78, 98, 7, 9, 3, 2] //using fill method
+        // console.log(number);
+
+        // number.fill(0)
+        // console.log(number);
+        // number.fill(0, 3, 7)
+        // console.log(number);
+
+        let fruits = ['apple', 'banana', 'orange', 'kiwi'];
+
+        fruits.splice(2, 1, 'grape', 'melon', 'value1', 'value2', 'value3', 'value4');
+        console.log(fruits);
+
 
 
     </script>
