Open , close , print BOM Methods

--- a/JavaScript/BOM/code1.html
+++ b/JavaScript/BOM/code1.html
@@ -9,6 +9,7 @@
 
 <body>
     <button onclick="myFunction()">Alert</button>
+    <button onclick="fun()">Open</button>
     <script>
         // function myFunction() {
         // window.alert("i am alert button")
@@ -66,6 +67,26 @@
         // }
         // let output = setInterval(displayTime, 1000)
         // clearInterval(output)
+
+
+        // open
+        // function fun() {
+        //     let openWindow = window.open("https://www.google.com", "_blank")
+        // }
+
+
+        // window.close();
+        // window.setTimeout(function () {
+        //     window.close();
+        // }, 5000)
+
+
+        // print
+        // function fun() {
+        //     window.print()
+        // }
+
+
     </script>
 </body>
 
