--- a/JavaScript/BOM/history/page2.html
+++ b/JavaScript/BOM/history/page2.html
@@ -14,6 +14,10 @@
     <a href="index.html">Go to Home</a>
     <a href="page1.html">Go to Page 1</a>
 
+    <div>
+        <img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="">
+    </div>
+
     <br><br>
     <button onclick="goBack()">Go Back</button>
     <button onclick="goForward()">Go Forward</button>
